--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = ESP32-C3
+
 [env:WROOM]
 platform = espressif32
 board = upesy_wroom
@@ -17,5 +20,11 @@ lib_deps =
 	esphome/AsyncTCP-esphome@^2.1.3
 	esphome/ESPAsyncWebServer-esphome@^3.1.0
 
-; Partition Table Configuration
-;board_build.partitions = partitions.csv
+[env:ESP32-C3]
+platform = espressif32
+board = esp32-c3-devkitm-1
+framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	esphome/AsyncTCP-esphome@^2.1.3
+	esphome/ESPAsyncWebServer-esphome@^3.1.0
