--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = ESP32-C3
+default_envs = WROOM
 
 [env:WROOM]
 platform = espressif32
